--- a/refer-javascript/index.html
+++ b/refer-javascript/index.html
@@ -432,8 +432,9 @@
             left: 15%;
             border-radius: 50%;
         }
-
         /* //dog */
+
+
         @media (max-width: 800px){
             #wrap {
                 height: auto;
@@ -451,6 +452,10 @@
                 padding: 5px 20px;
             }
         }
+        @media (max-width: 1370px){
+            
+        }
+        
     </style>
 </head>
 <body>
