--- a/site/index.html
+++ b/site/index.html
@@ -46,6 +46,11 @@
         <script src="https://oss.maxcdn.com/libs/respond.../assets2/js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+<style>
+    .bgs11 {
+        background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+    }
+</style>
 <body>
     <a class="sr-only" href="#content">Skip to main content</a>
     <header class="navbar navbar-inverse navbar-static-top bs-docs-nav" role="banner">
@@ -62,32 +67,23 @@
             <nav class="collapse navbar-collapse bs-navbar-collapse pull-right" role="navigation">
                 <ul class="nav navbar-nav">
                     <li><a href="https://javab-png.tistory.com/">Tistory</a></li>
-                    <li><a href="https://codepen.io/webstoryboy">Codepen</a></li>
-                    <li><a href="https://github.com/webstoryboy/dothome1">Github</a></li>
-                    <li><a href="https://www.figma.com/@874463">Figma</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <div class="bs-header bgs1" id="content">
+    <div class="bs-header bgs11" id="content">
         <div class="container">
-            <h1>Wireframe Reference v1.0 &lt;/doc&gt;</h1>
+            <h1>Site Reference v1.0 &lt;/doc&gt;</h1>
             <p><a href="https://heoar.github.io/mybhar/" target="_blank">heoar.github.io/mybhar</a></p>
         </div>
     </div>
     <div class="container bs-docs-container">
         <div class="row">
-            <div class="col-md-9" role="main">
+            <div class="col-md-12" role="main">
                 <!-- Intro1 -->
                 <div class="bs-docs-section">
                     <h2 id="intro1" class="page-header">카드 유형</h2>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="thumbnail">
-                                <img src="img/card-card.jpg" alt="사이트유형01">
-                            </a>
-                        </div>
-                    </div>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FQ4vaonGx2rbc53q52qTfq9%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D127%253A52" allowfullscreen></iframe>
                     <p>사이트 보기 <a href="cardType.html">View</a></p>
                 </div>
                 <!-- //Intro1 -->
@@ -95,13 +91,7 @@
                 <!-- Intro1 -->
                 <div class="bs-docs-section">
                     <h2 id="intro2" class="page-header">이미지 유형</h2>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="thumbnail">
-                                <img src="img/img-card.jpg" alt="사이트유형01">
-                            </a>
-                        </div>
-                    </div>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FQ4vaonGx2rbc53q52qTfq9%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D127%253A278" allowfullscreen></iframe>
                     <p>사이트 보기 <a href="imgType.html">View</a></p>
                 </div>
                 <!-- //Intro1 -->
@@ -109,13 +99,7 @@
                 <!-- Intro3 -->
                 <div class="bs-docs-section">
                     <h2 id="intro3" class="page-header">슬라이드 유형</h2>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="thumbnail">
-                                <img src="img/slider-card.jpg" alt="사이트유형01">
-                            </a>
-                        </div>
-                    </div>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FQ4vaonGx2rbc53q52qTfq9%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D127%253A564" allowfullscreen></iframe>
                     <p>사이트 보기 <a href="sliderMenuType.html">View</a></p>
                 </div>
                 <!-- //Intro3 -->
@@ -123,32 +107,13 @@
                 <!-- Intro4 -->
                 <div class="bs-docs-section">
                     <h2 id="intro4" class="page-header">오버이펙트 유형</h2>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="thumbnail">
-                                <img src="img/hoverEffect-card.jpg" alt="사이트유형01">
-                            </a>
-                        </div>
-                    </div>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FQ4vaonGx2rbc53q52qTfq9%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D127%253A738" allowfullscreen></iframe>
                     <p>사이트 보기 <a href="hoverEffectType.html">View</a></p>
                 </div>
                 <!-- //Intro4 -->
 
             </div>
-            <!-- //col-md-0 -->
-            
-            <!-- //col-md-3 -->
-            <div class="col-md-3">
-                <div class="bs-sidebar hidden-print" role="complementary">
-                    <ul class="nav bs-sidenav">
-                        <li><a href="#intro1">카드 유형</a></li>
-                        <li><a href="#intro2">이미지 유형</a></li>
-                        <li><a href="#intro3">슬라이드 유형</a></li>
-                        <li><a href="#intro4">오버이펙트 유형</a></li>
-                    </ul>
-                </div>
-            </div>
-            <!--//col-md-3 -->
+
 
         </div>
         <!-- //row -->
@@ -160,11 +125,7 @@
             <ul class="footer-links muted">
                 <li>Currently v2.0</li>
                 <li>&middot;</li>
-                <li><a href="https://heoar.github.io/mybhar/">HEOAR</a></li>
-                <li>&middot;</li>
-                <li><a href="http://cafe.naver.com/crossbrowsing" target="_blank">publisher cafe</a></li>
-                <li>&middot;</li>
-                <li><a href="http://cafe.daum.net/flairdesignlink" target="_blank">designer cafe</a></li>
+                <li><a href="https://heoar.github.io/dothome21/">HEOAR</a></li>
             </ul>
         </div>
     </footer>
