--- a/refer-jquery/jqueryRefer02.html
+++ b/refer-jquery/jqueryRefer02.html
@@ -38,146 +38,200 @@
 
     <div class="table">
         <table>
-            <caption>기본 선택자</caption>
             <colgroup>
-                <col style = "width: 4%" />
+                <col style = "width: 10%" />
                 <col style = "width: 20%" />
                 <col style = "width: 20%" />
-                <col style = "width: 20%" />
-                <col style = "width: 36%" />
+                <col style = "width: 10%" />
+                <col style = "width: 45%" />
             </colgroup>
             <thead>
                 <tr>
-                    <th class="center">번호</th>
-                    <th>종류</th>
-                    <th>jQuery</th>
+                    <th class="center">종류</th>
+                    <th>제이쿼리</th>
+                    <th>예시</th>
                     <th>javascript</th>
                     <th>설명</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td class="center" rowspan="5"><a href="#sample01">1</a></td>
-                    <td>태그 선택자</td>
-                    <td>$("li")</td>
-                    <td>querySelectorALL("li")</td>
-                    <td>기본 태그를 선택합니다.</td>
-                </tr>
-                <tr>
-                    <td>클래스 선택자</td>
-                    <td>$(".class")</td>
-                    <td>querySelector(".class")</td>
-                    <td>클래스를 선택합니다.</td>
-                </tr>
-                <tr>
-                    <td>아이디 선택자</td>
-                    <td>$("#id")</td>
-                    <td>getElementById("#id")</td>
-                    <td>아이디를 선택합니다.</td>
-                </tr>
-                <tr>
-                    <td>그룹 선택자</td>
-                    <td>$("#id, .class")</td>
+                    <td class="center" rowspan="9">필터링</td>
+                    <td style="text-decoration: underline">.eq()</td>
+                    <td>$("selector").eq(3)</td>
                     <td>-</td>
-                    <td>여러개를 선택합니다.</td>
+                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>전체 선택자</td>
-                    <td>$("*")</td>
+                    <td>.filter()</td>
+                    <td>$("selector").filter()</td>
                     <td>-</td>
-                    <td>전체 선택을 합니다.</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.first()</td>
+                    <td>$("selector").first()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td style="text-decoration: underline"><strong>.has()</strong></td>
+                    <td>$("selector").has()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.is()</td>
+                    <td>$("selector").is()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.last()</td>
+                    <td>$("selector").last()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.map()</td>
+                    <td>$("selector").map()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.not()</td>
+                    <td>$("selector").not()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.slice()</td>
+                    <td>$("selector").slice()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td class="center" rowspan="14">트리 구조</td>
+                    <td>.children()</td>
+                    <td>$("selector").children()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.closets()</td>
+                    <td>$("selector").children()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td style="text-decoration: underline"><strong>.find()</strong></td>
+                    <td>$("selector").find()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.next()</td>
+                    <td>$("selector").next()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.next()</td>
+                    <td>$("selector").children()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.nextAll()</td>
+                    <td>$("selector").nextAll()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.nextUntil()</td>
+                    <td>$("selector").nextUntil()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.parent()</td>
+                    <td>$("selector").parent()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td style="text-decoration: underline"><strong>.parents()</strong></td>
+                    <td>$("selector").parents()</td>
+                    <td>parentNode</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.parentUntil()</td>
+                    <td>$("selector").parentUntil()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td style="text-decoration: underline"><strong>.prev()</strong></td>
+                    <td>$("selector").prev()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.prevAll()</td>
+                    <td>$("selector").prevAll()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.prevUntil()</td>
+                    <td>$("selector").prevUntil()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.siblings()</td>
+                    <td>$("selector").siblings()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td class="center" rowspan="5">기타</td>
+                    <td>.add()</td>
+                    <td>$("selector").add()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.addBack()</td>
+                    <td>$("selector").addBack()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.contents()</td>
+                    <td>$("selector").contents()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td style="text-decoration: underline"><strong>.each()</strong></td>
+                    <td>$("selector").each()</td>
+                    <td>forEach</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.end()</td>
+                    <td>$("selector").end()</td>
+                    <td>-</td>
+                    <td>-</td>
                 </tr>
             </tbody>
         </table>
     </div>
 
-    <hr>
-
-    <div id="sample01" class="sample">
-        <h2>01. 기본 선택자</h2>
-        <div class="view view1">
-            <ul>
-                <li>$("li")</li>
-                <li class="class">$(".class")</li>
-                <li id="id">$("#id")</li>
-                <li>$("#id .class")</li>
-                <li>$("*")</li>
-            </ul>
-        </div>
-        <div class="btn">
-            <a href="#c" class="reset1">리셋</a>
-            <a href="#c" class="btn1-1">클릭하면 클래스(.class)를 선택합니다.</a>
-            <a href="#c" class="btn1-2">클릭하면 아이디(#id)를 선택합니다.</a>
-            <a href="#c" class="btn1-3">클릭하면 기본(li) 태그를 선택합니다.</a>
-            <a href="#c" class="btn1-4">클릭하면 여러 태그(#id .class)를 선택합니다.</a>
-            <a href="#c" class="btn1-5">클릭하면 전체 태그를 선택합니다.</a>
-        </div>
-        <div class="code">
-            <pre class="line-numbers"><code class="language-js">{
-    $(".reset1").click(function(){
-        $(".view1 *").removeClass("blue");
-    });
-    $(".btn1-1").click(function(){
-        $(".view1 .class").addClass("blue");
-    });
-    $(".btn1-2").click(function(){
-        $(".view1 #id").addClass("blue");
-    });
-    $(".btn1-3").click(function(){
-        $(".view1 li").addClass("blue");
-    });
-    $(".btn1-4").click(function(){
-        $(".view1 .class, .view #id").addClass("blue");
-    });
-    $(".btn1-5").click(function(){
-        $(".view1 *").addClass("blue");
-    });
-}
-</code></pre>
-        </div>
-    </div>
-
-    <hr>
-
-    <script>
-         $(".reset1").click(function(){
-            $(".view1 *").removeClass("blue");
-        });
-        $(".btn1-1").click(function(){
-            $(".view1 .class").addClass("blue");
-        });
-        $(".btn1-2").click(function(){
-            $(".view1 #id").addClass("blue");
-        });
-        $(".btn1-3").click(function(){
-            $(".view1 li").addClass("blue");
-        });
-        $(".btn1-4").click(function(){
-            $(".view1 .class, .view #id").addClass("blue");
-        });
-        $(".btn1-5").click(function(){
-            $(".view1 *").addClass("blue");
-        });
-    </script>
-<!-- //sample01-->
-
-
-
-
-
-
-
-
-
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.0/prism.min.js"></script>
-    <script>
-        //sample0
-        
-       
 
-    </script>
 </body>
 </html>
