--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -117,9 +117,9 @@
             </colgroup>
             <thead>
                 <tr>
-                    <th>종류</th>
-                    <th>jQuery</th>
-                    <th>javascript</th>
+                    <th class="center">종류</th>
+                    <th>제이쿼리</th>
+                    <th>자바스크립트</th>
                     <th>설명</th>
                 </tr>
             </thead>
