--- a/refer-jquery/jqueryRefer06.html
+++ b/refer-jquery/jqueryRefer06.html
@@ -38,146 +38,135 @@
 
     <div class="table">
         <table>
-            <caption>기본 선택자</caption>
             <colgroup>
-                <col style = "width: 4%" />
+                <col style = "width: 10%" />
                 <col style = "width: 20%" />
                 <col style = "width: 20%" />
                 <col style = "width: 20%" />
-                <col style = "width: 36%" />
+                <col style = "width: 30%" />
             </colgroup>
             <thead>
                 <tr>
-                    <th class="center">번호</th>
-                    <th>종류</th>
-                    <th>jQuery</th>
+                    <th class="center">종류</th>
+                    <th>제이쿼리</th>
+                    <th>예시</th>
                     <th>javascript</th>
                     <th>설명</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td class="center" rowspan="5"><a href="#sample01">1</a></td>
-                    <td>태그 선택자</td>
-                    <td>$("li")</td>
-                    <td>querySelectorALL("li")</td>
-                    <td>기본 태그를 선택합니다.</td>
-                </tr>
-                <tr>
-                    <td>클래스 선택자</td>
-                    <td>$(".class")</td>
-                    <td>querySelector(".class")</td>
-                    <td>클래스를 선택합니다.</td>
-                </tr>
-                <tr>
-                    <td>아이디 선택자</td>
-                    <td>$("#id")</td>
-                    <td>getElementById("#id")</td>
-                    <td>아이디를 선택합니다.</td>
-                </tr>
-                <tr>
-                    <td>그룹 선택자</td>
-                    <td>$("#id, .class")</td>
+                    <td class="center" rowspan="3">기본</td>
+                    <td style="text-decoration: underline">.hide()</td>
+                    <td>$("selector").hide()</td>
                     <td>-</td>
-                    <td>여러개를 선택합니다.</td>
+                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>전체 선택자</td>
-                    <td>$("*")</td>
+                    <td style="text-decoration: underline">.show()</td>
+                    <td>$("selector").show()</td>
                     <td>-</td>
-                    <td>전체 선택을 합니다.</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td style="text-decoration: underline">.toggle()</td>
+                    <td>$("selector").toggle()</td>
+                    <td></td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td class="center" rowspan="4">페이드</td>
+                    <td>.fadeIn()</td>
+                    <td>$("selector").fadeIn()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.fadeOut()</td>
+                    <td>$("selector").fadeOut()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.fadeTo()</td>
+                    <td>$("selector").fadeTo()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.fadeToggle()</td>
+                    <td>$("selector").fadeToggle()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td class="center" rowspan="3">슬라이드</td>
+                    <td>.slideDown()</td>
+                    <td>$("selector").slideDown()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.slideUp()</td>
+                    <td>$("selector").slideUp()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.slideToggle()</td>
+                    <td>$("selector").slideToggle()</td>
+                    <td></td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td class="center" rowspan="7">커스텀</td>
+                    <td>.animate()</td>
+                    <td>$("selector").animate()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.delay()</td>
+                    <td>$("selector").delay()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.finish()</td>
+                    <td>$("selector").finish()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.stop()</td>
+                    <td>$("selector").stop()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.queue()</td>
+                    <td>$("selector").queue()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.ClearQueue()</td>
+                    <td>$("selector").ClearQueue()</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>.deQueue()</td>
+                    <td>$("selector").deQueue()</td>
+                    <td>-</td>
+                    <td>-</td>
                 </tr>
             </tbody>
         </table>
     </div>
 
-    <hr>
-
-    <div id="sample01" class="sample">
-        <h2>01. 기본 선택자</h2>
-        <div class="view view1">
-            <ul>
-                <li>$("li")</li>
-                <li class="class">$(".class")</li>
-                <li id="id">$("#id")</li>
-                <li>$("#id .class")</li>
-                <li>$("*")</li>
-            </ul>
-        </div>
-        <div class="btn">
-            <a href="#c" class="reset1">리셋</a>
-            <a href="#c" class="btn1-1">클릭하면 클래스(.class)를 선택합니다.</a>
-            <a href="#c" class="btn1-2">클릭하면 아이디(#id)를 선택합니다.</a>
-            <a href="#c" class="btn1-3">클릭하면 기본(li) 태그를 선택합니다.</a>
-            <a href="#c" class="btn1-4">클릭하면 여러 태그(#id .class)를 선택합니다.</a>
-            <a href="#c" class="btn1-5">클릭하면 전체 태그를 선택합니다.</a>
-        </div>
-        <div class="code">
-            <pre class="line-numbers"><code class="language-js">{
-    $(".reset1").click(function(){
-        $(".view1 *").removeClass("blue");
-    });
-    $(".btn1-1").click(function(){
-        $(".view1 .class").addClass("blue");
-    });
-    $(".btn1-2").click(function(){
-        $(".view1 #id").addClass("blue");
-    });
-    $(".btn1-3").click(function(){
-        $(".view1 li").addClass("blue");
-    });
-    $(".btn1-4").click(function(){
-        $(".view1 .class, .view #id").addClass("blue");
-    });
-    $(".btn1-5").click(function(){
-        $(".view1 *").addClass("blue");
-    });
-}
-</code></pre>
-        </div>
-    </div>
-
-    <hr>
-
-    <script>
-         $(".reset1").click(function(){
-            $(".view1 *").removeClass("blue");
-        });
-        $(".btn1-1").click(function(){
-            $(".view1 .class").addClass("blue");
-        });
-        $(".btn1-2").click(function(){
-            $(".view1 #id").addClass("blue");
-        });
-        $(".btn1-3").click(function(){
-            $(".view1 li").addClass("blue");
-        });
-        $(".btn1-4").click(function(){
-            $(".view1 .class, .view #id").addClass("blue");
-        });
-        $(".btn1-5").click(function(){
-            $(".view1 *").addClass("blue");
-        });
-    </script>
-<!-- //sample01-->
-
-
-
-
-
-
-
-
-
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.0/prism.min.js"></script>
-    <script>
-        //sample0
-        
-       
 
-    </script>
 </body>
 </html>
