--- a/site/cardType.html
+++ b/site/cardType.html
@@ -175,5 +175,83 @@
             </div>
         </div>
     </section>
+
+     <!-- card type4 -->
+     <section id="cardType">
+        <div class="container">
+            <div class="cardType04">
+               <h2>AI Dvices</h2>
+               <p>AI 기술이 집약된 제품으로 편리하 일상을 만나보세요.</p>
+            <div class="card-wrap">
+                <div class="card">
+                    <img src="img/clova_img01.jpg" alt="clova1">
+                    <div class="txt-box">
+                        <div class="tilte">CLOVA Lamp</div>
+                        <span class="new">NEW</span>
+                        <p>책을 읽어주는 아이 친구 프리미엄 기능의 스마트 램프</p>
+                        <div class="bt1">구매하기</div>
+                        <div class="bt">알아보기</div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="img/clova_img02.jpg" alt="clova2">
+                    <div class="txt-box">
+                        <div class="tilte">CLOVA Clock</div>
+                        <span class="new">NEW</span>
+                        <p>매일 일상을 편리하게 변화시켜줄 스마트 클락</p>
+                        <div class="bt">알아보기</div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="img/clova_img03.jpg" alt="clova2">
+                    <div class="txt-box">
+                        <div class="tilte">CLOVA Friends</div>
+                        <p>음악 추천부터 네이버 검색까지 다재다능한 스마트 스피커</p>
+                        <div class="bt">알아보기</div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="img/clova_img04.jpg" alt="clova2">
+                    <div class="txt-box">
+                        <div class="tilte">CLOVA WAVE</div>
+                        <p>풍부하고 선명한 사운드로 즐기는 최적의 스마트홈 스피커</p>
+                        <div class="bt">알아보기</div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="img/clova_img05.jpg" alt="clova2">
+                    <div class="txt-box">
+                        <div class="tilte">CLOVA Friends mini</div>
+                        <p>더 작고 더 가벼워진 스마트 스피커</p>
+                        <div class="bt">알아보기</div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="img/clova_img06.jpg" alt="clova2">
+                    <div class="txt-box">
+                        <div class="tilte">Doraemon edition</div>
+                        <p>고양이형 만능 로봇 도라에몽을 모티브로 한 스마트 스피커</p>
+                        <div class="bt">알아보기</div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="img/clova_img07.jpg" alt="clova2">
+                    <div class="txt-box">
+                        <div class="tilte">MINIONS edition</div>
+                        <p>귀여운 악동 미니언즈를 모티브로 한 스마트 스피커</p>
+                        <div class="bt">알아보기</div>
+                    </div>
+                </div>
+
+            </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
