--- a/refer-javascript/test.html
+++ b/refer-javascript/test.html
@@ -8,25 +8,9 @@
 </head>
 <body>
     <script>
-        const obj2 = [
-            {a: 1000},
-            {a: 2000},
-            {a: 3000}
-
-        ];
-
-        const obj3 = [1000, 2000, 3000, "a", "b", "c"]
-
-        // 1000
-        // 2000
-        // 3000
-        // 5000
-        // 6000
-
-
-       document.write(obj[0].a, "<br>");
-       document.write(obj[1].a,"<br>");
-       document.write(obj[2].a, "<br>");
+        const title = document.getElementById("title");
+        title.innerHTML = "Hi! Frdm JS"
+        console.dir(title);
     </script>
 </body>
 </html>
