--- a/site/hoverEffectType.html
+++ b/site/hoverEffectType.html
@@ -13,27 +13,30 @@
     <link rel="stylesheet" href="CSS/hoverEffectType.css">
     <!-- 나눔스퀘어 웹 폰트 -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
+
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
+
 </head>
 <body>
     <!-- hoverEffectType01 -->
     <section class="imageType">
         <div class="container">
             <div class="imageType01">
-                <h2>동물공감 인터뷰</h2>
+                <h2>실내 식물 가꾸기</h2>
                 <div class="image-wrap">
                     <div class="image">
-                        <img class="image-img" src="img/imagetype01.jpg" alt="웰시코기 이미지입니다.">
+                        <img class="image-img" src="img/imgtype01.jpg" alt="식물이미지01">
                         <div class="image-cont">
-                            <h3 class="image-title">애교만점 웰시코기</h3>
-                            <p class="image-desc">포메라니안은 작고 귀여운 체구에 비해 대범한 성격을 가지고 있으며 호기심이 많은 견종입니다. </p>
+                            <h3 class="image-title">식물들의 집</h3>
+                            <p class="image-desc">내 식물에게 딱 맞는 화분 고르기와 분갈이</p>
                             <a class="image-btn red" href="#">자세히 보기</a>
                         </div>
                     </div>
                     <div class="image">
-                        <img class="image-img" src="img/imagetype02.jpg" alt="비숑프리제 이미지입니다.">
+                        <img class="image-img" src="img/imgtype02.jpg" alt="식물이미지02">
                         <div class="image-cont">
-                            <h3 class="image-title">강아지계의 연예인, 비숑프리제</h3>
-                            <p class="image-desc">최근 연예인들 사이에서 키우는 강아지로 유명해진 비숑프리제는 생김새가 아주 작은 바빗과 매우 흡사하여 바비숑이라는 이름...</p>
+                            <h3 class="image-title">식물 관리하기</h3>
+                            <p class="image-desc">식물에게 중요한 물주기와 햇빛, 잎과 뿌리 관리하는 법</p>
                             <a class="image-btn yellow" href="#">자세히 보기</a>
                         </div>
                     </div>
@@ -48,26 +51,28 @@
     <section class="imageType">
         <div class="container">
             <div class="imageType02">
-                <h2>깊은 저 바닷속 해파리</h2>
+                <h2 class="h2-1">I am
+                    <h2 class="h2-2">‘ 패셔니스타 ’</h2>
+                </h2>
                 <div class="image-wrap">
                     <figure class="image">
-                        <img class="image-img" src="img/imageType03.jpg" alt="해파리 이미지1">
+                        <img class="image-img" src="img/imgtype03.jpg" alt="해파리 이미지1">
                         <figcaption class="image-cont">
-                            <h3 class="image-title">해파리 형태</h3>
+                            <h3 class="image-title">트렌트 패션</h3>
                             <a href="#" class="image-btn">자세히 보기</a>
                         </figcaption>
                     </figure>
                     <figure class="image">
-                        <img class="image-img" src="img/imageType04.jpg" alt="해파리 이미지2">
+                        <img class="image-img" src="img/imgtype04.jpg" alt="해파리 이미지2">
                         <figcaption class="image-cont">
-                            <h3 class="image-title">해파리 형태</h3>
+                            <h3 class="image-title">계절 패션</h3>
                             <a href="#" class="image-btn">자세히 보기</a>
                         </figcaption>
                     </figure>
                     <figure class="image">
-                        <img class="image-img" src="img/imageType05.jpg" alt="해파리 이미지3">
+                        <img class="image-img" src="img/imgtype05.jpg" alt="해파리 이미지3">
                         <figcaption class="image-cont">
-                            <h3 class="image-title">해파리 형태</h3>
+                            <h3 class="image-title">악세사리</h3>
                             <a href="#" class="image-btn">자세히 보기</a>
                         </figcaption>
                     </figure>
