20210831수업 업로드
업로드

--- a/refer-css/transform.html
+++ b/refer-css/transform.html
@@ -1100,6 +1100,17 @@
                   <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
             </div>
 
+            <!-- example03 -->
+            <div>
+                <h3 style="margin-top: 100px; margin-bottom: 10px;">example03</h3>
+                <p class="codepen" data-height="500" data-default-tab="result" data-slug-hash="ZEyQjog" data-user="heoar" style="height: 500px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+                    <span>See the Pen <a href="https://codepen.io/heoar/pen/ZEyQjog">
+                    Wave Animation</a> by heoar (<a href="https://codepen.io/heoar">@heoar</a>)
+                    on <a href="https://codepen.io">CodePen</a>.</span>
+                  </p>
+                  <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+            </div>
+
             </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.0/prism.min.js"></script>
