--- a/javascript/ts.html
+++ b/javascript/ts.html
@@ -7,24 +7,83 @@
     <title>Document</title>
 </head>
 <body>
-{
-  let num = "1.과일";
+<script>
+  //const num = [100, 200, 300, 400, 500];
 
-  if( num == "1.과일" ){
-      document.write("당신은 생각이 많고 진지해 보이는 연상 타입입니다.<br>");
-      if( num == “2.떡" ){
-      document.write("당신은 무드에 약해 화술가 매너가 좋은 타입입니다.<br>");
-      if( num == “3.수정구슬” ){
-      document.write("당신은 정열적이고 열중하는 타입입니다.<br>");
-      if( num == “4.현찰” ){
-        document.write("당신은 부드럽고 따뜻한 타입입니다.<br>");
-      if( num == “5.반지” ){
-        document.write("당신은 자기를 보호해 줄 수 있는 이성 타입입니다.<br>");
-      }
-      }
-      }
-      }
-      }
-}
+  //for문
+  //for( i=0; i<num.length; i++){
+  //  document.write(num[i]);
+  //}
+
+  //document.write("<br>")
+
+  //forEach문
+  //num.forEach(function(el){
+  //  document.write(el);
+  //});
+
+  //document.write("<br>")
+
+  //forEach문
+ //num.forEach(function(el, index, array){
+  //  document.write(el, "<br>");
+  //  document.write(index, "<br>");
+  //  document.write(array, "<br>");
+  //});
+
+ // document.write("<br><br>")
+
+  //300빼고
+  //const sp = num.splice(2,1)
+  //document.write(num);
+
+  //document.write("<br><br>")
+
+  //map
+  //num.map((el, index, array)=>{
+  //  document.write(el);
+  //})
+
+
+
+//{
+//const obj = [
+//  {a:100},
+//  {a:200},
+//  {a:300},
+//]
+
+//document.write(obj[0].a);
+//document.write(obj[1].a);
+//document.write(obj[2].a);
+
+//document.write("<br>")
+
+//map
+//obj.map(el=>{
+//  document.write(el.a);
+//});
+
+//document.write("<br>")
+
+//한줄
+//obj.map(el=>document.write(el.a));
+
+//}
+
+document.write("<br>")
+
+function func(num, name, jop){
+    document.write(num + ". 내이름은" + name + "이며 직업은" + jop + "입니다.");
+  }
+func("1","웹쓰","웹 퍼블리셔");
+
+//const info = new func("1","웹쓰","웹 퍼블리셔")
+
+//1. 내 이름은 웹쓰이며 직업은 웹 퍼블리셔입니다.
+
+
+
+</script>
 </body>
 </html>
