--- a/refer-javascript/javascriptRefer12.html
+++ b/refer-javascript/javascriptRefer12.html
@@ -42,15 +42,15 @@
     <h2 class="mt20">문자열 샘플</h2>
     <ul>
         <ol>
-        <li>01. CSS 속성 첫 글자만 검색하기 <a class="sam" href="javascriptSample01.html">charAt()</a></li>
-        <li>02. CSS 속성 검색하면 설명 보여주기 <a class="sam" href="javascriptSample02.html">find()</a></li>
-        <li>02. CSS 정렬하기 <a class="sam" href="javascriptSample03.html">sort()</a></li>
+            <li>CSS 속성 첫 글자만 검색하기 <a class="sam" href="javascriptSample01.html">charAt()</a></li>
+            <li>CSS 속성 검색하면 설명 보여주기 <a class="sam" href="javascriptSample02.html">find()</a></li>
+            <li>CSS 정렬하기</li>
         </ol>
     </ul>
     <h2 class="mt20">날짜 샘플</h2>
     <ul>
         <ol>
-        <li>01. 시계 만들기 <a class="sam" href="javascriptSample04.html">getHours()</a></li>
+        <li>시계 만들기 <a class="sam" href="javascriptSample04.html">getHours()</a></li>
         </ol>
     </ul>
 
