--- a/refer-javascript/javascriptRefer06.html
+++ b/refer-javascript/javascriptRefer06.html
@@ -631,7 +631,7 @@
      <hr>
 
     <div id="sample10" class="sample">
-        <h2>10. 배열 메서드 : find() / findIdex() : 배열 요소 검색하기 : 반환(요소)<span class="dot"></span></h2>
+        <h2>10. 배열 메서드 : find() / findIndex() : 배열 요소 검색하기 : 반환(요소)<span class="dot"></span></h2>
         <div class="code">
             <div class="view">
                 <table>
@@ -988,7 +988,7 @@
 
            document.querySelector(".sample01_N1").innerHTML = "1";
            document.querySelector(".sample01_Q1").innerHTML = "[100, 200, 300, 400, 500]";
-           document.querySelector(".sample01_M1").innerHTML = "Jength";
+           document.querySelector(".sample01_M1").innerHTML = "length";
            document.querySelector(".sample01_R1").innerHTML = text;
         }
 
