--- a/refer-javascript/javascriptRefer03.html
+++ b/refer-javascript/javascriptRefer03.html
@@ -670,7 +670,7 @@
         <a href="#c" class="btn-t19">결과값</a>
     </div>
     <div id="exbox" class="ex19">
-        <div class="value24"></div>
+        <div class="value24">console.log</div>
     </div>
     <script>
         document.querySelector(".btn-t19").addEventListener("click",() => {
