--- a/refer-mysql/index.html
+++ b/refer-mysql/index.html
@@ -46,6 +46,11 @@
         <script src="https://oss.maxcdn.com/libs/respond.../assets2/js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+<style>
+    #content {
+        background-image: linear-gradient(-165deg, #7DE2FC 0%, #B9B6E5 100%);FC;
+    }
+</style>
 <body>
     <a class="sr-only" href="#content">Skip to main content</a>
     <header class="navbar navbar-inverse navbar-static-top bs-docs-nav" role="banner">
