--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -564,11 +564,11 @@
     });
 
     $(".btn4-10").click(function(){
-        $(".text4").html("이 샘플 박스의 가로 값은" + $(document).width() + "px 입니다." + "<br>이 샘플 박스의 세로 값은" + $(document).height() + "px 입니다.");
+        $(".text4").html("이 문서의 가로 값은" + $(document).width() + "px 입니다." + "<br>이 문서의 세로 값은" + $(document).height() + "px 입니다.");
     });
 
     $(".btn4-11").click(function(){
-        $(".text4").html("이 브라우저의 가로 값은" + $(window).width() + "px 입니다." + "<br>이 샘플 박스의 세로 값은" + $(window).height() + "px 입니다.");
+        $(".text4").html("이 브라우저의 가로 값은" + $(window).width() + "px 입니다." + "<br>이 브라우저의 세로 값은" + $(window).height() + "px 입니다.");
     });
 
 </script>
