20210902탭메뉴수정
수정하기

--- a/refer-effect/menuEffect/javascriptME01.html
+++ b/refer-effect/menuEffect/javascriptME01.html
@@ -10,7 +10,7 @@
     <style>
         #tab-menu {
             min-width: 600px;
-            background: #000;
+            background: #ffc400;
             position: absolute;
             left: 50%;
             top: 50%;
@@ -30,13 +30,13 @@
             text-align: center;
         }
         .tab-btn li a {
-            color: #fff;
+            color: #000;
             text-decoration: none;
             padding: 15px;
             display: block;
         }
         .tab-btn li.active a {
-            border-bottom: 3px solid #ffc400;
+            border-bottom: 3px solid #000;
         }
         .tab-cont {
             background: #fff;
@@ -147,7 +147,6 @@
                         </div>
                         <div class="view-cont">
                             <div>
-                                <h2>html code</h2>
 <pre><code class="language-html">&lt;main&gt;
     &lt;div id="tab-menu"&gt;
         &lt;div class="tab-btn"&gt;
@@ -186,7 +185,6 @@
 </code></pre>
                             </div>
                             <div>
-                                <h2>css code</h2>
 <pre><code class="language-css">#tab-menu {
     min-width: 600px;
     background: #000;
@@ -236,7 +234,6 @@
 </code></pre>
                             </div>
                             <div>
-                                <h2>javascript code</h2>
 <pre><code class="language-javascript">const Vtite = document.querySelectorAll(".view-title ul li");
 const Vcont = document.querySelectorAll(".view-cont > div");
 
