20210902제이쿼리 색 수정
수정하기

--- a/refer-effect/menuEffect/jqueryMe01.html
+++ b/refer-effect/menuEffect/jqueryMe01.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/highlight.min.css">
     <style>
-        #tab-menu {
+               #tab-menu {
             min-width: 600px;
-            background: #000;
+            background: #ffc400;
             position: absolute;
             left: 50%;
             top: 50%;
@@ -31,13 +31,13 @@
             text-align: center;
         }
         .tab-btn li a {
-            color: #fff;
+            color: #000;
             text-decoration: none;
             padding: 15px;
             display: block;
         }
         .tab-btn li.active a {
-            border-bottom: 3px solid #ffc400;
+            border-bottom: 3px solid #000;
         }
         .tab-cont {
             background: #fff;
