20210902소스보기모바일
반응형해보기

--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -596,7 +596,7 @@
 </style>
 
 <div id="sample05" class="sample">
-    <h2>05. 해당 영역의 width() / innerWidth() / outerWidth() & height() / innerHeight() / outerHeight()</h2>
+    <h2>05. 해당 원 영역의 width() / height()</h2>
     <div class="view view1">
         <div class="view ex5">
            <span class="circle circle5"></span>
