--- a/refer-effect/menuEffect/javascriptME01.html
+++ b/refer-effect/menuEffect/javascriptME01.html
@@ -20,7 +20,6 @@
             color: #fff;
             overflow: hidden;
         }
-        .tab-btn {}
         .tab-btn ul {
             display: flex;
         }
@@ -56,6 +55,16 @@
             margin-bottom: 5px;
         }
 
+        @media (max-width: 800px) {
+            #tab-menu {
+                min-width: 90%;
+            }
+            .tab-btn li a {
+                font-size: 12px;
+                padding: 10px;
+            }
+        }
+
     </style>
 </head>
 <body class="bg bg1">
@@ -71,7 +80,7 @@
                     <li><a href="#">노래4</a></li>
                     <li><a href="#">노래5</a></li>
 
-                    
+
                 </ul>
             </div>
             <div class="tab-cont">
