20210903오늘수업 업로드
업로드하기

--- a/refer-effect/menuEffect/javascriptME01.html
+++ b/refer-effect/menuEffect/javascriptME01.html
@@ -278,6 +278,10 @@ Vtite.forEach((element, index)=>{
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
     <script>
+        window.onload = function() {
+        agentCheck(); //호환성 체크
+        }
+
         const tabBtn = document.querySelectorAll(".tab-btn ul li");
         const tabCtn = document.querySelectorAll(".tab-cont > div");
 
