--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -234,8 +234,8 @@
                 </tr>
                 <tr>
                     <td class="center" rowspan="5">offset</td>
-                    <td>.offset()</td>
-                    <td>-</td>
+                    <td>.offset().top / .offset().left</td>
+                    <td>.offsetTop / offsetLeft</td>
                     <td>요소의 좌표 값(문서를 기준) 가져오기/설정하기</td>
                 </tr>
                 <tr>
