--- a/site/index.html
+++ b/site/index.html
@@ -104,6 +104,14 @@
                 </div>
                 <!-- //Intro3 -->
 
+                <!-- Intro3 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro3" class="page-header">슬라이드 유형2</h2>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FQ4vaonGx2rbc53q52qTfq9%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D327%253A56" allowfullscreen></iframe>
+                    <p>사이트 보기 <a href="testType01.html">View</a></p>
+                </div>
+                <!-- //Intro3 -->
+
                 <!-- Intro4 -->
                 <div class="bs-docs-section">
                     <h2 id="intro4" class="page-header">오버이펙트 유형</h2>
