--- a/refer-effect/parallexEffect/index.html
+++ b/refer-effect/parallexEffect/index.html
@@ -21,11 +21,20 @@
     <nav>
         <ul id="nav">
             <li><a href="../index.html">MAIN</a></li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
+        </ul>
+        <ul id="nav">
+            <li><a href="javascriptPE01.html">1</a></li>
+            <li><a href="javascriptPE02.html">2</a></li>
+            <li><a href="javascriptPE03.html">3</a></li>
+            <li><a href="javascriptPE04.html">4</a></li>
+            <li><a href="javascriptPE05.html">5</a></li>
+        </ul>
+        <ul id="nav">
+            <li><a href="jqueryPE01.html">1</a></li>
+            <li><a href="jqueryPE02.html">2</a></li>
+            <li><a href="jqueryPE03.html">3</a></li>
+            <li><a href="jqueryPE04.html">4</a></li>
+            <li><a href="jqueryPE05.html">5</a></li>
         </ul>
     </nav>
 
